modulo physicians a funcionar com hapauth e happatients